add jwt configuration

--- a/birthday-api/src/main/resources/application-dev.properties
+++ b/birthday-api/src/main/resources/application-dev.properties
@@ -15,10 +15,12 @@ bot_name=test_spring_reminder_bot
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 #spring.h2.console.enabled=true
 #mysql
-spring.datasource.url=${DB_TEST_DATABASE}
+spring.datasource.url=${DB_LOCAL_DATABASE}
 spring.datasource.username=${DB_TEST_USER}
 spring.datasource.password=${DB_TEST_PASSWORD}
 #create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+#spring.security.user.name=${DB_TEST_SECURITY_USERNAME}
+#spring.security.user.password=${DB_TEST_SECURITY_PASSWORD}
 
